--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
-  ""name"": ""specproj-5r6ppbkd"",
-  ""goal"": ""index builder for incident response"",
-  ""language"": ""go"",
-  ""template"": ""go-service""
+    "name":  "specproj-5r6ppbkd",
+    "goal":  "index builder for incident response",
+    "language":  "go",
+    "template":  "go-service"
 }
